# ragx

./: .env.toml  .gitignore  Dockerfile  README.md  gunicorn_config.py  manage.py  pyproject.toml
main/: apps.py  response.py  tasks.py  urls.py
main/dao/: __init__.py  milvus.py  paragraph.py
main/handlers/: __init__.py  chat.py  document.py  paragraph.py  project.py  report.py
main/management/commands/: get_llm_score.py  make_embeddings.py  make_paragraphs.py  upload_es.py
main/md/: current.py  response.py  timer.py
main/migrations/: 0001_initial.py  0002_rename_result_contents_report_paragraph_contents_and_more.py  0003_report2.py
main/models/: __init__.py  base.py  document.py  paragraph.py  project.py  report.py  report2.py
main/params/: __init__.py  document.py  project.py  report.py
main/results/: __init__.py  base.py  document.py  paragraph.py  project.py  report.py
main/serializers/: __init__.py  project.py  report.py  report2.py
main/utils/: embedding.py  enums.py  es.py  llm.py  log.py  milvus.py  ollama.py  openai.py  reranker.py  splitter_md.py  timer.py
main/views/: __init__.py  project.py  report.py  report2.py
ragx/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
tests/: questions.md  test_milvus.py
